--- a/view/partials/movie.handlebars
+++ b/view/partials/movie.handlebars
@@ -1,4 +1,4 @@
-<a href="/movies">Back</a>
+<a href="/">Back</a>
 <article class="movie">
     <h1>{{ movie.attributes.title }}</h1>
     <div class="intro">
